--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,8 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+    implementation "androidx.fragment:fragment-ktx:1.5.4"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
 
     //Dagger - Hilt
     implementation "com.google.dagger:hilt-android:2.42"
@@ -71,6 +73,7 @@ dependencies {
     kapt "androidx.hilt:hilt-compiler:1.0.0"
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 
+    //Retrofit
     def retrofit = '2.9.0'
     implementation "com.squareup.retrofit2:retrofit:$retrofit"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit"
@@ -78,9 +81,6 @@ dependencies {
 
     //logging
     implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
-
-    implementation "androidx.fragment:fragment-ktx:1.5.4"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
 
     // Coroutine Lifecycle Scopes
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
@@ -91,10 +91,6 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:2.4.0-alpha08"
     implementation "com.google.accompanist:accompanist-flowlayout:0.17.0"
 
-    //Data Store
-    def datastore = "1.0.0"
-    implementation "androidx.datastore:datastore-core:$datastore"
-    implementation "androidx.datastore:datastore-preferences:$datastore"
 
     //Room
     def room = "2.4.3"
